samples/_failures_safe/1761333581_5ebe84_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_eb38407b.c:160:1: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ at end of input
  160 | int main
      | ^~~
